--- a/index.html
+++ b/index.html
@@ -53,29 +53,28 @@
             <div class="row row-1">
                 <h4 class="text-capitalize">Profile</h4>
                 <p>
-                    Good at web development like this CV is done in page form. 
-                    Installation, testing and maintenance of software systems, 
-                    with diverse and promising skills, proficient in a variety of Platforms, languages and embedded systems. 
-                    And have a strong interest and development ability in using robots and chips (Raspberry Pi, Arduino nano). 
-                    Hope the skills can be helped the organazation grow while also improving professional skills and personal qualities.
+                    Good at web development, the CV is created in the form of page. Installation,
+ 			  testing and maintenance of software systems, with diverse and promising skills, 
+			  proficient in various platforms, languages and embedded systems.
+ 			  In addition, have an interest and development ability in using robots and chips (Raspberry Pi, Arduino nano). 
+			  It is hoped that these skills will help the organization grow while improving professional skills and personal qualities.
                 </p>
             </div>
             <hr style="color:yellowgreen">
             <div class="row row-2">
                 <h4 class="text-capitalize">Employment History</h4>
-                <h5>Canteen</h5>
+                <h5>Catering</h5>
                 <p>January 2021 - Present</p>
                 <p>
-                    Have been working in the catering industry before. 
-                    After several years of computer learning and skills accumulation. 
-                    Hope to be able to engage in IT related work.
+                    Have been working in the catering industry before.
+			  After several years of computer learning and skills accumulation, hope to be able to engage in IT related work.
                 </p>
             </div>
 
             <div class="row row-3">
                 <h4 class="text-capitalize">Education</h4>
                 <h6>BSc(Computing), University of Greenwich, London</h6>
-                <p>Septerber 2021 - June 2022</p>
+                <p>September 2021 - June 2022</p>
             </div>
              <!-- class="end row-3" -->
             <hr style="color:yellowgreen">
